--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
   <h1>H1</h1>
   <iframe src="http://localhost"></iframe>
+  <iframe src="http://169.254.169.254/latest/meta-data/"></iframe>
 </body>
 </html>
